[project]
name = "finance_control"
version = "0.1.0"
description = "Financial tracking bot using aiogram"
authors = [{name = "Roman"}]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "pydantic>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
